<resources>
    <string name="app_name">Advanced Workout Clock</string>

    <string name="chrono_tab_indicator">Savable Chrono</string>
    <string name="timer_tab_indicator">Timer Activities</string>
    <string name="data_tab_indicator">Personal Data</string>

    <!--LAYOUT SPECIFIC-->
    <string name="test_yourself">Test Yourself</string>
    <string name="workout_timer">Workout Timer</string>
    <string name="settings">settings</string>
    <string name="activity_indicator">Activity</string>
    <string name="save_request">Save</string>
    <string name="save_on_pause_request">save on reset</string>
    <string name="rest_circle_indicator">Rest</string>
    <string name="workout_circle_indicator">Workout</string>
    <string name="timer_label">timer_activity</string>
    <string name="Timer_activity_name_hint">Insert a name (ex. body workout)</string>
    <string name="workout_time_indicator">Workout Time</string>
    <string name="rest_time_indicator">Rest Time</string>
    <string name="min_hint" translatable="false">min</string>
    <string name="sec_hint" translatable="false">sec</string>
    <string name="save_activity_button_text">Save Activity</string>
    <string name="addNewItem">Add Item</string>
    <string name="workout_indicator">workout</string>
    <string name="rest_indicator">rest</string>
    <string name="remaining_indicator">Remaining</string>
    <string name="chrono_insert_hint">Insert name (ex: Rubik\'s cube)</string>


    <!--String for outputs on fragments-->
    <string name="INTERNAL_ERROR">Sorry, Internal Error occurred</string>

    <!--//add activity dialog button messages
        private const val ADD_ACTIVITY_CONFIRM = "SAVE ACTIVITY"

        //delete activity dialog messages
        private const val DEL_ACTIVITY_TITLE = "DELETE THE CURRENT ACIVITY?"
        private const val DEL_ACTIVITY_CONFIRM = "DELETE"

        private const val DISMISS_DIALOG = "CANCEL"-->

    <string name="ADD_ACTIVITY_CONFIRM">SAVE ACTIVITY</string>
    <string name="DEL_ACTIVITY_TITLE">Are you sure to delete ths activity?</string>
    <string name="DEL_ACTIVITY_CONFIRM">DELETE</string>
    <string name="DISMISS_DIALOG">CANCEL</string>
    <string name="ADD_ITEM_CONFIRM">SAVE ITEMS</string>

    <string name="ADD_ACTIVITY_SUCCESS">Successfully added!</string>
    <string name="ADD_ACTIVITY_DB_ERROR">Error: this name already exists!</string>
    <string name="ADD_EMPTY_ACTIVITY">Error: activity can\' t be empty</string>
    <string name="DEL_ACTIVITY_SUCCESS">Successfully deleted!</string>
    
    <!-- Strings for workout and rest on presenter-->
    <string name="WORKOUT_SEC_ONLY">work %1$s</string>
    <string name="WORKOUT_ONE_MINUTE">work 1%1s</string>
    <string name="WORKOUT_MINUTE_AND_SECS">work %1$s %2$s</string>

    <string name="REST_SEC_ONLY">rest %1$s</string>
    <string name="REST_ONE_MINUTE">rest 1%1s</string>
    <string name="REST_MINUTE_AND_SECS">rest %1$s %2$s</string>


    <!--CHRONOMETER ACTIVITY SPECIFIC-->
    <string name="SAVE_TIMING_SUCCES">Timing saved successfully</string>
    <string name="CREATE_ACTIVITY_HINT">Create an activity to save timings</string>

    <!--TIMER ACTIVITIES SPECIFIC-->
    <string name="NUMBER_FORMAT_ERROR">Error: only numbers are accepted</string>
    <string name="EMPTY_ITEM_FIELDS">Error: this activity has no item!</string>
    <string name="NO_SELECTED_ACTIVITY">Error: Please select an activity</string>
    <string name="EMPTY_ACTIVITY_ON_START">Error! this activity has no timers</string>
    <string name="TOO_LONG_ACTIVITY_NAME">Error! name too long: Max 15 letters</string>


    <string name="graphs_indicator">Soon graphs will arrive</string>

    <!--CHRONOMETER TIMES
    <string name="TIME_AND_TIMESTAMP" translatable="false">%1$s ==> %2$s</string> -->

    <!--FOR TIMER ACTIVITIES-->

</resources>
