<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white">

    <LinearLayout
        tools:context=".IntervalTimerActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_layout"/>

        <LinearLayout
            android:id="@+id/blue_coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/timer_rect"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/remaining_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:text="@string/remaining_indicator"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/timer_text_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="start|center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/workout_indicator_circle"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/timer_workout_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/workout_indicator"
                        android:textColor="@color/white"
                        android:textStyle="bold|italic"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rest_indicator_circle"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/timer_rest_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rest_indicator"
                        android:textColor="@color/white"
                        android:textStyle="bold|italic"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="00:00"
            android:textSize="40sp"
            android:textColor="@color/black"/>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_circular_rest"
            style="@style/Widget.MaterialProgressBar.ProgressBar"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:minWidth="240dp"
            android:minHeight="240dp"
            app:layout_anchor="@+id/timer_text"
            app:layout_anchorGravity="center"
            app:mpb_progressTint="@color/accent_yellow"/>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_circular_work"
            style="@style/Widget.MaterialProgressBar.ProgressBar"
            android:layout_width="366dp"
            android:layout_height="366dp"
            android:minWidth="366dp"
            android:minHeight="366dp"
            app:layout_anchor="@+id/timer_text"
            app:layout_anchorGravity="center"
            app:mpb_progressTint="@color/deep_orange"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:padding="1dp"
            android:background="@color/white">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:theme="@style/Theme.MaterialComponents"
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_play_arrow"
                app:iconGravity="end"
                app:iconTint="@color/colorSecondary"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:theme="@style/Theme.MaterialComponents"
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_pause"
                app:iconGravity="end"
                app:iconTint="@color/colorSecondary"
                app:iconPadding="0dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:theme="@style/Theme.MaterialComponents"
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_stop"
                app:iconTint="@color/colorSecondary"
                app:iconGravity="end"
                app:iconPadding="0dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:theme="@style/Theme.MaterialComponents"
                android:id="@+id/fast_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_fast_forward"
                app:iconGravity="end"
                app:iconTint="@color/colorSecondary"
                android:backgroundTint="@color/white"
                app:iconPadding="0dp"/>

        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>